--- a/assets/site/bin_color_calc.sass
+++ b/assets/site/bin_color_calc.sass
@@ -92,3 +92,11 @@ $gray_d: #263238
                 width: 100%
                 & .cls-area
                     // opacity: 0.5
+    &-footer
+        text-align: center
+        padding: 20px 15px
+        background: lighten($gray_l, 30%)
+        border: 1px solid $gray_d
+        border-right: none
+        .btn
+            background: #fff
