--- a/assets/site/bin_color_calc.css
+++ b/assets/site/bin_color_calc.css
@@ -14,14 +14,27 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+}
+
+@media screen and (max-width: 767px) {
+  .bin_calc-body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 
 .bin_calc-panel {
   background: #e5e6e8;
   border: 1px solid #263238;
   width: 300px;
+}
+
+@media screen and (max-width: 767px) {
+  .bin_calc-panel {
+    width: 100%;
+  }
 }
 
 .bin_calc-panel__list {
@@ -126,7 +139,7 @@
   top: 25%;
   left: 25%;
   position: absolute;
-  z-index: 1000;
+  z-index: 1;
   background: url(../images/ico/ok.png) #fff no-repeat center center;
   border: 1px solid #e1e1e1;
   border-radius: 50%;
@@ -153,6 +166,13 @@
   background: #e5e6e8;
   border: 1px solid #263238;
   border-right: none;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bin_calc-footer .btn {
