add color groups

--- a/assets/site/bin_color_calc.sass
+++ b/assets/site/bin_color_calc.sass
@@ -61,6 +61,9 @@ $tablet: 'screen and (min-width: 768px) and (max-width: 991px)'
             list-style: none
             &--active
                 display: flex
+            &-group
+                width: 100%
+                padding: 5px
             &-item
                 display: flex
                 flex-direction: column
