--- a/assets/site/bin_color_calc.css
+++ b/assets/site/bin_color_calc.css
@@ -106,6 +106,11 @@
   display: flex;
 }
 
+.bin_calc-panel__colors-group {
+  width: 100%;
+  padding: 5px;
+}
+
 .bin_calc-panel__colors-item {
   display: -webkit-box;
   display: -ms-flexbox;
