--- a/assets/site/bin_color_calc.sass
+++ b/assets/site/bin_color_calc.sass
@@ -7,6 +7,7 @@ $tablet: 'screen and (min-width: 768px) and (max-width: 991px)'
 
 #canvas
     display: none
+    // width: 100%
 .bin_calc
     min-height: 550px
     &-body
@@ -48,7 +49,7 @@ $tablet: 'screen and (min-width: 768px) and (max-width: 991px)'
                         top: calc(50% - 10px)
                         right: 10px
                         position: absolute
-                        z-index: 1000
+                        z-index: 3
                         background: url(../images/ico/ok.png) #fff no-repeat center center
                         border: 1px solid #e1e1e1
                         border-radius: 50%
@@ -105,7 +106,7 @@ $tablet: 'screen and (min-width: 768px) and (max-width: 991px)'
         text-align: center
         padding: 20px 15px
         background: lighten($gray_l, 30%)
-        border: 1px solid $gray_d
+        // border: 1px solid $gray_d
         border-right: none
         // display: flex
         flex-direction: row
